--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0;url=./frontend/pages/home.php" />
+    <meta http-equiv="refresh" content="0;url=./Frontend/pages/home.php" />
     <meta name="description" content="Silence is golden" />
   </head>
 </html>
+
+<!-- to -->
+<!-- Voir avec Lucas pour le design + couleur voire background-image + police -->
+<!-- Faire footer -->
